k-labs/lab04/multi-ingress/kubia-blue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubiablue
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30172
  selector:
    app: kubiablue
